# gallery-bot

./: Cargo.toml  config.json  package-lock.json  package.json  tsconfig.json
src/: handle_command.ts  handle_message.ts  index.ts  main.js  main.rs  main.ts
src/commands/: config.ts  mod.rs  scan_channel.rs  scan_channel.ts
