[package]
name = "gallery-bot"
version = "0.1.0"
authors = ["Morgan Van Amerongen <mistigri.van@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["cache", "rustls_backend", "framework", "standard_framework", "utils"]
